@@ -1,3 +1,8 @@
+2006-10-28  Reiner Steib  <Reiner.Steib@gmx.de>
+
+	* gnus-agent.el (gnus-agent-make-mode-line-string): Make it compatible
+	with Emacs 21 and XEmacs.
+
 2006-10-27  Teodor Zlatanov  <tzz@lifelogs.com>
 
 	* spam.el (spam-parse-address): new function for better parsing,
